# modelService

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: qwen3_model_service.md
scripts/: setup.sh  start.sh
src/py/model_service/: __init__.py  api_routes.py  client.py  model_manager.py  server.py  start_service.py
src/py/prepare/: qwen3_chatbot.py  setup_qwen_model.py
src/py/utils/: constants.py  log_util.py
video_subtitle/: CLAUDE.md  readme.md
video_subtitle/src/py/: test_cuda.py  use-faster-whisper.py  use-whisper.py
vl/: CLAUDE.md  readme.md
vl/doc/: ACTUAL_FIX.md  CORRECTED_TEST_NOW.txt  DEPLOYMENT.md  FINAL_SOLUTION.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  MEMORY_FIX_SUMMARY.md  MEMORY_TROUBLESHOOTING.txt  QUICKSTART.md  QUICK_FIX.txt  README_8GB_SOLUTION.txt  STATUS.txt  TEST_NOW.txt  WSL2_8GB_SOLUTION.md  XWAYLAND_MEMORY_FIX.md  readme.md  requirements.txt
vl/src/py/: GEMINI.md  client.py  download_model.py  inference_direct.py  start_server.py  test_inference.py
vl/src/py/examples/: analyze_scene.py  caption_image.py  caption_image_direct.py  vqa.py
